# docflow

./: .gitignore  README.md  document-analyzer-spec.md  pyproject.toml
docs/: overview.md  user-guide.md
python-sdk/: README.md  pyproject.toml
service/: .env  .env.example  Dockerfile  README.md  app.py  config.py  main.py  requirements.txt
service/handlers/: __init__.py  http_extract.py  http_profiles.py
src/docflow/core/extraction/: engine.py
src/docflow/core/providers/: base.py  gemini.py
src/docflow/sdk/: client.py
src/docflow/sdk/cli/: excel_exporter.py  main.py
